tests/negative/attr_writer_type.lu
require "godot"

class AccessorTarget
  @level: Integer = 1

  attr_accessor :level
end

class Main < Node
  def ready: void
    target: AccessorTarget = AccessorTarget.new
    target.level = "wrong"
  end
end
